Fix exec dependencies
handle deprecated warnings

--- a/color_converter/setup.cfg
+++ b/color_converter/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/color_converter
+script_dir=$base/lib/color_converter
 [install]
-install-scripts=$base/lib/color_converter
+install_scripts=$base/lib/color_converter
