--- a/ros2_demo/setup.cfg
+++ b/ros2_demo/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/ros2_demo
+script_dir=$base/lib/ros2_demo
 [install]
-install-scripts=$base/lib/ros2_demo
+install_scripts=$base/lib/ros2_demo
